--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Farm Management System</title>
+  <title>Cattle Farm</title>
   <style>
     body {
       margin: 0;
@@ -49,15 +49,13 @@
     button:hover {
       background: #388e3c;
     }
-    #google_translate_element {
-      margin-top: 15px;
-    }
+       }
   </style>
 </head>
 <body>
   <div class="overlay">
     <h1>🌾 Farm Management System</h1>
-    <p>Enter your farm name (optional):</p>
+    <p>Enter your name :</p>
     <input type="text" id="farmName" placeholder="Farm Name">
     <br>
     <button onclick="login()">Login</button>
