--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
   <div class="overlay">
-    <h1>🌾 Farm Management System</h1>
+    <h1>🌾 Cattle Farm </h1>
     <p>Enter your name :</p>
     <input type="text" id="farmName" placeholder="Farm Name">
     <br>
